--- a/index.html
+++ b/index.html
@@ -1,86 +1,104 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Analizador de Referencias</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    textarea {
-      width: 100%;
-      max-width: 600px;
-      height: 150px;
-      padding: 10px;
-      font-size: 14px;
-    }
-    button {
-      margin-top: 10px;
-      padding: 10px 20px;
-      font-size: 14px;
-      cursor: pointer;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    li {
-      margin: 5px 0;
-    }
-    a {
-      text-decoration: none;
-      color: blue;
-    }
-  </style>
-</head>
-<body>
-  <h2>Analizador de Referencias</h2>
-  <textarea id="inputText" placeholder="Copia aquí la lista de referencias..."></textarea>
-  <br>
-  <button onclick="analizar()">Analizar</button>
-  <div id="result"></div>
+import React, { useState } from "react";
+import { FileText, Globe, Loader, ExternalLink } from "lucide-react";
 
-  <script>
-    function analizar() {
-      const texto = document.getElementById('inputText').value;
-      const lineas = texto.split('\n');
-      const ul = document.createElement('ul');
-      let encontrado = false;
-      // Expresión regular para detectar URLs que comiencen con http:// o https://
-      const urlRegex = /https?:\/\/[^\s]+/g;
+function getDomainFromUrl(url) {
+  try {
+    const { hostname } = new URL(url);
+    return hostname;
+  } catch {
+    return "";
+  }
+}
 
-      lineas.forEach(linea => {
-        const trimmed = linea.trim();
-        if (trimmed.length > 0) {
-          const urls = trimmed.match(urlRegex);
-          if (urls) {
-            // Se toma la primera URL encontrada en la línea
-            const url = urls[0];
-            const li = document.createElement('li');
-            const a = document.createElement('a');
-            a.href = url;
-            a.target = '_blank';
-            a.rel = 'noopener noreferrer';
-            // Se muestra el texto completo de la línea como descripción del enlace
-            a.textContent = trimmed;
-            li.appendChild(a);
-            ul.appendChild(li);
-            encontrado = true;
-          }
+export default function ReferencesApp() {
+  const [inputText, setInputText] = useState("");
+  const [references, setReferences] = useState([]);
+  const [loading, setLoading] = useState(false);
+
+  function handleProcess() {
+    setLoading(true);
+    setTimeout(() => {
+      const lines = inputText.split(/\r?\n/).filter((line) => line.trim() !== "");
+
+      const parsed = lines.map((line) => {
+        const httpIndex = line.indexOf("http");
+        if (httpIndex !== -1) {
+          const url = line.substring(httpIndex).trim();
+          const textBefore = line.substring(0, httpIndex).trim();
+          const isPDF = /\.pdf(\?.*)?$/i.test(url);
+          const domain = getDomainFromUrl(url);
+
+          return { fullText: line, referenceText: textBefore, url, isPDF, domain };
+        } else {
+          return { fullText: line, referenceText: line, url: "", isPDF: false, domain: "" };
         }
       });
+      setReferences(parsed);
+      setLoading(false);
+    }, 1000);
+  }
 
-      const resultDiv = document.getElementById('result');
-      // Se limpia el contenido previo del área de resultados
-      resultDiv.innerHTML = "";
-      if (encontrado) {
-        resultDiv.appendChild(ul);
-      } else {
-        resultDiv.textContent = "No se encontraron referencias con URL.";
-      }
-    }
-  </script>
-</body>
-</html>
+  return (
+    <div className="min-h-screen bg-gray-100 flex flex-col items-center py-8 px-4">
+      <div className="w-full max-w-3xl bg-white p-6 rounded-xl shadow-lg">
+        <h1 className="text-3xl font-bold text-gray-800 mb-4">🔍 Analizador de Referencias</h1>
+        <p className="text-sm text-gray-600 mb-4">Ingrese sus referencias en el cuadro y haga clic en "Analizar".</p>
+        <textarea
+          className="w-full h-32 p-3 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4 text-sm shadow-sm"
+          placeholder="Pega aquí tus referencias..."
+          value={inputText}
+          onChange={(e) => setInputText(e.target.value)}
+        />
+        <button
+          className="w-full px-4 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition-all text-sm flex items-center justify-center"
+          onClick={handleProcess}
+          disabled={loading}
+        >
+          {loading ? <Loader className="animate-spin w-5 h-5 mr-2" /> : "Analizar"}
+        </button>
 
+        <div className="mt-6">
+          {references.length === 0 && !loading && (
+            <p className="text-gray-500 text-center text-sm">No hay referencias analizadas aún.</p>
+          )}
+          {references.map((ref, index) => (
+            <div
+              key={index}
+              className="p-4 rounded-lg border border-gray-200 bg-white flex flex-col sm:flex-row items-start sm:items-center justify-between hover:shadow-md transition-all mb-2"
+            >
+              <div className="flex-1 mb-2 sm:mb-0">
+                <p className="text-sm text-gray-700 font-medium">{ref.referenceText}</p>
+                {ref.domain && (
+                  <p className="text-xs text-gray-500 mt-1">🌍 Dominio: {ref.domain}</p>
+                )}
+              </div>
+              <div className="flex items-center space-x-3">
+                {ref.isPDF ? (
+                  <div className="flex items-center space-x-1 text-red-600 text-sm font-medium">
+                    <FileText className="w-4 h-4" />
+                    <span>PDF</span>
+                  </div>
+                ) : (
+                  ref.url && (
+                    <div className="flex items-center space-x-1 text-blue-600 text-sm font-medium">
+                      <Globe className="w-4 h-4" />
+                      <span>Web</span>
+                    </div>
+                  )
+                )}
+                {ref.url && (
+                  <button
+                    className="px-3 py-1 bg-green-600 text-white font-semibold rounded text-sm hover:bg-green-700 transition-all flex items-center"
+                    onClick={() => window.open(ref.url, "_blank")}
+                  >
+                    <ExternalLink className="w-4 h-4 mr-1" /> Abrir
+                  </button>
+                )}
+              </div>
+            </div>
+          ))}
+        </div>
+      </div>
+    </div>
+  );
+}
