--- a/referenciasgem.html
+++ b/referenciasgem.html
@@ -1,188 +1,69 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Analizador de Referencias</title>
-    <!-- Incluir React, ReactDOM y Babel desde sus CDNs -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/@babel/standalone@7/babel.min.js"></script>
-
-    <!-- Lucide React para los iconos -->
-    <script src="https://unpkg.com/lucide-react/dist/lucide-react.min.js"></script>
-    <!-- Nota: la librería lucide-react oficial asume un entorno de empaquetado; esta CDN sirve de demo
-         y podría requerir adaptaciones para una integración fluida. -->
-         
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Procesador de Referencias</title>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <style>
-      /* Puedes pegar aquí tus estilos Tailwind generados o un pequeño CSS manual, 
-         si no estás usando un pipeline de construcción, pero no tendrás las utilidades de Tailwind 
-         a menos que lo integres adecuadamente. */
+        body { font-family: Arial, sans-serif; background-color: #f4f4f4; padding: 20px; }
+        .container { max-width: 700px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); }
+        textarea { width: 100%; height: 150px; margin-bottom: 20px; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
+        button { background-color: #007BFF; color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; display: block; width: 100%; margin-bottom: 20px; font-size: 16px; }
+        button:hover { background-color: #0056b3; }
+        ul { list-style: none; padding: 0; }
+        li { background: #f8f9fa; margin: 10px 0; padding: 15px; border-radius: 8px; display: flex; justify-content: space-between; align-items: center; border: 1px solid #dee2e6; }
+        .details { flex-grow: 1; margin-right: 10px; }
+        .title { font-size: 16px; font-weight: bold; margin-bottom: 5px; color: #343a40; }
+        .domain { font-size: 14px; color: #6c757d; }
+        .pdf-indicator { font-weight: bold; color: red; }
+        .button-group button { background-color: #28a745; color: white; padding: 8px 12px; border: none; border-radius: 5px; cursor: pointer; font-size: 14px; }
+        .button-group button:hover { background-color: #218838; }
     </style>
-  </head>
-  <body>
-    <!-- Contenedor donde montaremos nuestra app React -->
-    <div id="root"></div>
-
-    <!-- Aquí va el código React en Babel -->
+</head>
+<body>
+    <div class="container">
+        <h2 style="text-align: center;">Procesador de Referencias</h2>
+        <textarea 
+            id="referenceInput"
+            placeholder="Pega aquí tus referencias..."
+        ></textarea>
+        <button onclick="processReferences()">Procesar Referencias</button>
+        <ul id="referenceList"></ul>
+    </div>
     <script type="text/babel">
-      const { useState } = React;
-      const { FileText, Globe } = lucideReact;
+        function processReferences() {
+            const text = document.getElementById("referenceInput").value;
+            const regex = /\d+\. (.*?), fecha de acceso: .*?, (https?:\/\/\S+)/g;
+            let matches;
+            let references = [];
 
-      function getDomainFromUrl(url) {
-        try {
-          const { hostname } = new URL(url);
-          return hostname;
-        } catch {
-          return "";
-        }
-      }
-
-      function ReferencesApp() {
-        const [inputText, setInputText] = useState("");
-        const [references, setReferences] = useState([]);
-
-        function handleProcess() {
-          const lines = inputText.split(/\\r?\\n/).filter((line) => line.trim() !== "");
-          const parsed = lines.map((line) => {
-            const httpIndex = line.indexOf("http");
-            if (httpIndex !== -1) {
-              const url = line.substring(httpIndex).trim();
-              const textBefore = line.substring(0, httpIndex).trim();
-              const isPDF = /\\.pdf(\\?.*)?$/i.test(url);
-              const domain = getDomainFromUrl(url);
-
-              return {
-                fullText: line,
-                referenceText: textBefore,
-                url: url,
-                isPDF: isPDF,
-                domain: domain,
-              };
-            } else {
-              return {
-                fullText: line,
-                referenceText: line,
-                url: "",
-                isPDF: false,
-                domain: "",
-              };
+            while ((matches = regex.exec(text)) !== null) {
+                const url = matches[2];
+                const domain = new URL(url).hostname;
+                const isPDF = url.endsWith(".pdf");
+                references.push({ title: matches[1], url, domain, isPDF });
             }
-          });
-          setReferences(parsed);
+
+            const referenceList = document.getElementById("referenceList");
+            referenceList.innerHTML = "";
+
+            references.forEach((ref, index) => {
+                const listItem = document.createElement("li");
+                listItem.innerHTML = `
+                    <div class="details">
+                        <div class="title">${index + 1}. ${ref.title} ${ref.isPDF ? '<span class="pdf-indicator">(PDF)</span>' : ''}</div>
+                        <div class="domain">Dominio: ${ref.domain}</div>
+                    </div>
+                    <div class="button-group">
+                        <button onclick="window.open('${ref.url}', '_blank')">Abrir</button>
+                    </div>
+                `;
+                referenceList.appendChild(listItem);
+            });
         }
-
-        return (
-          <div style={{ minHeight: '100vh', backgroundColor: '#F9FAFB' /* gris claro */ }}>
-            <div style={{
-              maxWidth: '768px',
-              margin: 'auto',
-              backgroundColor: 'white',
-              padding: '24px',
-              borderRadius: '16px',
-              marginTop: '24px',
-              boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-            }}>
-              <h1 style={{ fontSize: '1.5rem', fontWeight: 'bold', marginBottom: '0.5rem', color: '#1F2937' }}>
-                Analizador de Referencias
-              </h1>
-              <p style={{ fontSize: '0.875rem', color: '#4B5563', marginBottom: '1rem' }}>
-                Ingrese o pegue sus referencias y haga clic en “Analizar”.
-              </p>
-              <textarea
-                style={{
-                  width: '100%',
-                  height: '100px',
-                  padding: '8px',
-                  border: '1px solid #D1D5DB',
-                  borderRadius: '8px',
-                  marginBottom: '1rem'
-                }}
-                placeholder="Pega aquí tus referencias..."
-                value={inputText}
-                onChange={(e) => setInputText(e.target.value)}
-              />
-              <button
-                style={{
-                  padding: '8px 16px',
-                  backgroundColor: '#1D4ED8',
-                  color: '#FFF',
-                  border: 'none',
-                  borderRadius: '8px',
-                  fontWeight: '600',
-                  cursor: 'pointer'
-                }}
-                onClick={handleProcess}
-              >
-                Analizar
-              </button>
-
-              <div style={{ marginTop: '24px' }}>
-                {references.map((ref, index) => (
-                  <div
-                    key={index}
-                    style={{
-                      padding: '16px',
-                      borderRadius: '12px',
-                      border: '1px solid #E5E7EB',
-                      backgroundColor: '#FFF',
-                      display: 'flex',
-                      flexDirection: 'column',
-                      marginBottom: '16px',
-                    }}
-                  >
-                    <div style={{ flex: 1, marginBottom: '8px' }}>
-                      <p style={{ fontSize: '0.875rem', color: '#374151', margin: 0 }}>
-                        {ref.referenceText}
-                      </p>
-                      {ref.domain && (
-                        <p style={{ fontSize: '0.75rem', color: '#6B7280', margin: '4px 0 0' }}>
-                          Origen: {ref.domain}
-                        </p>
-                      )}
-                    </div>
-                    <div style={{
-                      display: 'flex',
-                      alignItems: 'center',
-                      gap: '8px',
-                      marginTop: '8px'
-                    }}>
-                      {ref.isPDF ? (
-                        <div style={{ display: 'flex', alignItems: 'center', color: '#DC2626' }}>
-                          <FileText style={{ width: '16px', height: '16px', marginRight: '4px' }} />
-                          <span style={{ fontSize: '0.875rem', fontWeight: '500' }}>PDF</span>
-                        </div>
-                      ) : (
-                        <div style={{ display: 'flex', alignItems: 'center', color: '#2563EB' }}>
-                          <Globe style={{ width: '16px', height: '16px', marginRight: '4px' }} />
-                          <span style={{ fontSize: '0.875rem', fontWeight: '500' }}>No PDF</span>
-                        </div>
-                      )}
-                      {ref.url && (
-                        <button
-                          style={{
-                            padding: '4px 8px',
-                            backgroundColor: '#059669',
-                            color: '#FFF',
-                            border: 'none',
-                            borderRadius: '6px',
-                            fontSize: '0.875rem',
-                            cursor: 'pointer'
-                          }}
-                          onClick={() => window.open(ref.url, '_blank')}
-                        >
-                          Abrir
-                        </button>
-                      )}
-                    </div>
-                  </div>
-                ))}
-              </div>
-            </div>
-          </div>
-        );
-      }
-
-      ReactDOM.render(<ReferencesApp />, document.getElementById('root'));
     </script>
-  </body>
+</body>
 </html>
